# MVP

./: README.md
backend/: .env.example  .gitignore  implementation_plan.md  pyproject.toml  requirements.txt
backend/audit/: admin.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/audit/migrations/: 0001_initial.py
backend/backend/: celery.py  settings.py  urls.py
backend/core/: admin.py  apps.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
backend/core/management/commands/: seed_data.py  seed_hr_manager.py
backend/core/migrations/: 0001_initial.py  0002_backgroundtask.py
backend/employees/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py  views_dashboard.py
backend/employees/migrations/: 0001_initial.py  0002_initial.py
backend/reviews/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/reviews/migrations/: 0001_initial.py
backend/salary_bands/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/salary_bands/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: entry-server.tsx  routeTree.gen.ts  styles.css
frontend/src/components/: AppShell.tsx  EmployeeFormPanel.tsx  ImportCsvDialog.tsx  LoginPage.tsx  PageHeader.tsx
frontend/src/lib/: csv.ts  format.ts  seed.ts  store.tsx  types.ts
frontend/src/routes/: __root.tsx  audit.tsx  bands.tsx  dashboard.tsx  (+5 more)
